@@ -1,5 +1,7 @@
 2010-06-20  Roland McGrath  <roland@redhat.com>
 
+	* readelf.c (print_debug_frame_section): Handle version 4 format.
+
 	* readelf.c (print_debug_line_section): Handle version 4 format.
 
 2010-06-14  Roland McGrath  <roland@redhat.com>
